<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HelloMoon</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="hellomoon_play">Play</string>
    <string name="hellomoon_stop">Stop</string>
    <string name="hellomoon_play_video">Play</string>
    <string name="hellomoon_stop_video">Stop</string>
    <string name="hellomoon_pause_video">Pause</string>
  <string name="hellomoon_image_description">Neil Armstrong stepping onto the moon</string>
</resources>
