<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/armstrong_on_moon"
        android:contentDescription="@string/hellomoon_image_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:layout_weight="1"
        />

    <VideoView
        android:id="@+id/hellomoon_videoView"
        android:layout_height="212dp"
        />

    <TableRow
        android:gravity="center|bottom"
        android:layout_weight="0" >
        <Button android:id="@+id/hellomoon_playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hellomoon_play"
            />

        <Button android:id="@+id/hellomoon_stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hellomoon_stop"
            />
    </TableRow>

    <TableRow
        android:gravity="center|bottom"
        android:layout_weight="0">

        <Button
            android:id="@+id/hellomoon_playVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hellomoon_play_video"
            />

        <Button
            android:id="@+id/hellomoon_stopVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hellomoon_stop_video"
            />

        <Button
            android:id="@+id/hellomoon_pauseVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hellomoon_pause_video"
            />

    </TableRow>
</TableLayout>